Fix overflow in blockquotes

--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -222,6 +222,9 @@ blockquote {
   margin: 0 2rem 1rem 0;
   color: $oc-gray-6;
   border-left: .3rem solid $oc-gray-8;
+  word-break: break-all;
+  overflow-wrap: break-word;
+  hyphens: auto;
 
   p:last-child {
     margin-bottom: 0;
